--- a/paper/paper7/paper7.tex
+++ b/paper/paper7/paper7.tex
@@ -316,7 +316,7 @@ To gain a better understanding about the role of certain requirements for data q
 We let the experts classify the constraints according to the severity if they are violated. Furthermore, we classified the type of each constraint (corresponding to a requirement) based on its complexity ranging from types commonly found in vocabulary specifications (e.g., domain, range, and cardinality restrictions), 
 over types that are simply stated using common constraint languages (e.g., language tag cardinality restrictions) to complex types that involve complex data structures or need more sophisticated languages to be easily expressible 
 %(e.g., constraints on network topologies)
-(e.g., constraints on graph-based structures) (section \ref{classification}).
+(e.g., constraints on graph-based structures) (Section \ref{classification}).
 
 As we do not want to base our conclusions on the evaluations of vocabularies and constraint definitions alone, we conducted a large-scale experiment.
 For 114 constraints, we evaluated the data quality of 15,694 data sets (4.26 billion triples) of \emph{SBE} research data on three common vocabularies in \emph{SBE} sciences (\emph{Disco}, \emph{QB}, \emph{SKOS}) obtained from 33 SPARQL endpoints.
@@ -325,7 +325,7 @@ Based on the evaluation results,
 we formulated several hypotheses to direct the further development of constraint languages.
 To make valid general statements for all vocabularies, however,
 the hypotheses still have to be verified or falsified
-by evaluating the quality of data represented by more than three vocabularies (section \ref{evaluation}).
+by evaluating the quality of data represented by more than three vocabularies (Section \ref{evaluation}).
 %The \textbf{contribution} of this paper is the development of a system 
 %\begin{enumerate}
 	%\item to classify RDF constraints (according to their severity levels) to evaluate the quality of metadata and data which may be represented by any vocabulary and 
