--- a/paper/paper 2/paper 2.tex
+++ b/paper/paper 2/paper 2.tex
@@ -170,7 +170,7 @@
 \authorrunning{XXXXX} % abbreviated author list (for running head)
 %
 %%%% list of authors for the TOC (use if author list has to be modified)
-\institute{GESIS ? Leibniz Institute for the Social Sciences, Germany\\
+\institute{GESIS - Leibniz Institute for the Social Sciences, Germany\\
 \email{thomas.bosch@gesis.org},\\ 
 \and
 University of Mannheim, Germany \\
@@ -437,7 +437,7 @@ On the other hand, RDF validation scenarios require the {\em closed-world assump
 This ambiguity in semantics is one of the main reasons why \emph{OWL 2} has not been adopted as a standard constraint language for RDF validation in the past.  
 %In case we want to use \emph{OWL 2} as a constraint language, we adopt the same semantics (CWA) that is for RDF validation in general. 
 %\tb{feedback from Erman: the major problem is semantics. OWL basically work in different semantics than others. And their semantics are formal. Closed world vs. Open World is also a part of this. / Thomas: I think your issue is tackled now? No.}
-\er{If a constraint is represented (recognized) by two different languages, that means, whenever it is violated in one language it is violated in other. We have to provide formal generic semantics for it; nor formally prove those statements.}
+\er{If a constraint is represented (recognized) by two different languages, that means, whenever it is violated in one language it is violated in other. We have to provide formal generic semantics for it; formally prove those statements.}
 
 \subsection{Basic Terminology for the Formulation of RDF Constraints}
 
