--- a/paper/paper 1/paper 1.tex
+++ b/paper/paper 1/paper 1.tex
@@ -259,7 +259,150 @@ In this paper, we investigate the relationship of validation and reasoning and t
 	% Constraint Validation with and without OWL
 %\end{itemize}
 
+\section{ESWC Reviews}
+
+\subsection{Reply}
+
+\begin{itemize}
+
+\item @Reviewer 4: If reasoning can be performed or if it does not make any sense to use it depends on the contraint type to be expressed and not on the constraint language. Although, reasoning is not yet implemented for other constraint languages than OWL 2, these constraint languages can easily be extended.
+
+\end{itemize}
+
+\subsection{Reviewer 2}
+
+%The paper addresses the problem of semantic RDF validation. This is an important topic related to data quality, and has not been much discussed in the litarature.
+%The topic is also timely due to the on-going work of the RDF Data Shapes Working Group Charter on this matter.
+
+%Section 1 gives a good and comprehensive motivation for the research.
+
+%In Section the central role of reasoning in validation and its relation to the problem of using/not-using Closed World Assumption and Unique Names Assumption in semantic web models is discussed.
+
+%A key contribution of the paper is the identification and systematic analysis of 74 requirements for expressing constraint types for RDF validation. They are discussed (to some extent) in Section 3.
+
+%In addition, the paper presents a classification of existing constraint languages based on their expressivity, where SPIN is found to be the most expressive system.
+ 
+Minor comments.
+ 
+p.2 Add references to RELAX NG and Schematron
+p.3 in Semantic Web community -> in the Semantic Web community
+p.7 Use more new lines in the first code box, like in the second box?
+ 
+subsection 3.3. The first paragraph is confusing. Refer to what? Follows? From this point on, the quality of the text decreases in general a bit...
+ 
+p.9 that, -> that
+p.10 according -> According
+p.10 needed[4] -> needed [4]
+p.10 is, one may -> is, that one may
+p.11 the all -> the set of all
+p.13 results is -> result is
+ 
+References
+ 
+Capital letters are missing in several references. For example, ref->RDF in [3].  Check them all and use extra {} to correct.
+
+
+\subsection{Reviewer 3}
+
+\textcolor{blue}{ 
+This paper provides a comparison of various constraint languages for RDF data validation. Section 2 uses a simple example to demonstrate why constructs for representing constraints are needed; Section 3 classifies constraint Description Logic  (DL) languages in terms of the adoption of CWA/UNA etc.; Section 4 classifies constraint DL languages in terms of so-called expressivity scores.
+ }
+
+\textcolor{blue}{ 
+The issue of representing integrity constraints in DL ontology languages has received significant attention in DLs and the Semantic Web due to its importance. So, the topic of the work is useful. 
+}
+
+\textcolor{blue}{ 
+Most part of the paper is understandable. There are some ideas that would be interesting if they are addressed properly. 
+}
+
+\textcolor{blue}{ 
+However, the contribution of this paper looked not very strong and results lack of depth, in my view.
+}
+ 
+Detailed comments:
+
+1. The paper claims to study constraints for RDF data validation but the metrics used in the paper are not specific to data validation.
+
+
+
+
+3. The term “expressivity scores” might be useful but a stronger argument is needed.
+
+4. Many terminologies are used but are not explained clearly, which bring a lot of sloppy sentences and statements in the paper.
+
+5. A reader might want to see some lessons or experiences that could be learned from such a comparative study.
+
+
+\subsection{Reviewer 4}
+
+\textcolor{blue}{
+The paper provides a quantification of the number of kinds of
+constraints that can be expressed/checked (from a curated set of use
+cases) depending on the language used to express them.  It's not
+obvious to me that this in itself is particularly noteworthy.
+}
+ 
+On page 3 (end of section 1), define CWA/UNA at their first
+appearance.
+ 
+The claim on page 4 that "Most of the constraint languages except OWL
+2, have a major shortcoming of redundancy" seems to rely on the notion
+that the inference of OWL 2 cannot be applied under the other
+languages, but I don't see that, and the paper's own introduction
+seems to agree with me.
+
+Section 3.2.2 "For the majority of the constraint types, reasoning is
+not needed to be performed prior to validation. It is possible,
+however, to execute reasoning before validating constraints for which
+reasoning does not affect validation results."  It's not clear to me
+what this is trying to say.  I read it as 'in both cases reasoning
+doesn't change the validation result', which is an odd statement.
+ 
+The numbers in parentheses in table 2: what are these
+extensions/restrictions?  The subsequent ordering of expressivity
+seems to include these values in the ranking: why?
+ 
+While gross numbers give some insight, if the paper listed which
+problems can be solved by each constraint language, it might allow
+readers more insight. 
+
+Is there a useful grouping of the kinds of
+restrictions that can be stated by each language?  
+
+How would a user go
+about choosing the right language for validation, or make trade offs
+around the kinds of validation they need (I appreciate the authors
+anticipate building a tool to help decide this)?
+ 
+Capitalization in the bibliography is awry ('dl-lite', 'rdf', 'Rdf',
+etc.).
+
 \section{Introduction}
+
+reviews:
+\begin{itemize}
+	\item motivation
+	\begin{itemize}
+		\item 	A better angle for this paper would be to ask the administrator to point out among the positive constraints (such the PIs) which ones should be used for completing data by reasoning, and which ones should be considered as constraints about the data completeness that he/she wants to enforce. These constraints could be transformed into SPARQL unsat queries and checked over the data once completed using reasoning.
+		\item The intention of the paper is not to present any concrete normative suggestion or solution on how constraints for RDF validation should be represented.
+		The intention of this paper is not to suggest how RDF constraints should be represented as there are already five promising constraint languages which can be used to formulate RDF constraints. The developed constraint languages’ expressivity scores, however, enable systems to recommend constraint languages depending on individual use cases and therefore needed constraint types. 
+		\item paper should provide a basis for future constraint language developments.
+	\end{itemize}
+	\item logical semantics vs. notation
+	
+	\begin{itemize}
+			\item 
+This paper makes a confusion between notations and logical semantics.
+It is not clear whether they consider RDF as a notation or as a data model with a logical semantics.
+This makes a lot of difference because several ontological statements can be expressed in RDF notation, even complex OWL inclusion statements. Their logical semantics cannot be ignored, even for the practioners.
+When they write <author, rdfs:range, Person>, this means precisely that they do not have to add explicitly for every triple <uri\_j, author, uri\_k> as many triples <uri\_k, rdf:type, Person>.
+This is the interest of RDF triplestores: to allow incomplete description of data, while allowing reasoning to complete it.
+Section 2 makes complicate this basic property for which a sentence in the introduction would have been sufficient.
+BTW, it is completely misleading to say in introduction  "Reasoning is a promising solution as a pre-validation step to overcome this shortcoming": reasoning must be part of RDF data management as soon as RDFS statements are declared (otherwise, why would they be declared ?).
+    \item answer: We use RDF as data model (with intended semantics) when performing reasoning with RDFS/OWL 2 semantics (OWA/nUNA) as well as for RDF validation and not just as a notation. We suggest using RDFS/OWL 2 semantics (OWA, nUNA) when performing reasoning (the original intention of RDFS/OWL 2) and we propose to take multiple languages into account (i.a. OWL 2) with different semantics (CWA, UNA) for the purpose to validate RDF data. Reasoning should be an optional step prior to validation. When reasoning is not wished to be performed, however, then omitted class assignment triples, e.g., must cause constraint violations as they are not intended to be inferred. 
+	\end{itemize}
+\end{itemize}
 
 % How research about RDF validation started
 % -----
@@ -765,6 +908,8 @@ This is not a problem if we add the UNA to the OWA, like in the \textit{DL-Lite}
 \section{Classification of RDF Constraints according to CWA/UNA Dependency, Reasoning and Complexity}
 \label{classification-rdf-constraints}
 
+\tb{R1: This is wrong that the Tbox axioms ( RDF constraints in this paper) can be classified as it is suggested in Section 3. The reason is that there exist possibly complex logical interferences between them. For instance, even in lightweight DLs such as  DL-Lite, positive inclusions (PIs) can be used to infer negative inclusions (NIs).}
+
 %We divide these constraints into three classes:
 %\begin{itemize}
 	%\item constraints expressible by OWL 2 QL
@@ -796,6 +941,16 @@ The subsequent steps are needed to get an idea about the performance (i.e. compu
 \end{enumerate}
 
 \subsection{Dependency on CWA with UNA}
+
+reviews:
+\begin{itemize}
+	\item @Reviewer 1, 3, 4: We consider the tied case in OWA, as this distinction (UNA/nUNA) is common in OWA. Although there are constructs to express that two names are the same or not, UNA is assumed for OWL 2 semantics in general. Validation has its origin in the XML world and therefore classically CWA/UNA is assumed and tied together. When assuming OWA/nUNA for RDF validation, we won’t get the intended validation results as validation won’t be that restrictive.
+	\item from 3. reviewer:
+2. It seemed the authors did not notice that, while DLs/OWL do not assume the unique name assumption (UNA), they have constructs to express when two names are the same or not. As a result, I am less sure if the classification in Section 3 makes sense any longer.
+
+  \item from 4. reviewer:
+Why is CWA tied to UNA, and OWA to nUNA, other than convention?
+\end{itemize}
 
 The distinction of constraint types regarding the dependency on the CWA with the UNA is an important aspect when combining reasoning with validation;
  OWL 2 reasoning requires the OWA without the UNA  whereas RDF validation is classically based on the UNA (different names represent different objects) and
@@ -1205,6 +1360,11 @@ Semantic-Web-Publication a ResourceShape ; property [
 \subsection{About the Complexity}
 \label{sec:constraints-complexity}
 %\tb{I think this sub section is not that fluently to read}
+
+reviews:
+\begin{itemize}
+	\item However, if it is about the “complexity on reasoning”, as we do mean ontological reasoning  here, the discussion is done according to well-established complexity results (in literature) on reasoning in particular DL languages, having only those  features used in constraints. Therefore the complex interferences are included. 
+\end{itemize}
 
 To have a further evaluation on the latter and to refer easily, we divide $\mathcal{C}_R$ into two classes (not disjoint). 
 Overall, we have the following. Since, OWL 2 DL is more expressive than OWL 2 QL,  $\mathcal{C}_R ^{\mathcal{QL}} \subseteq \mathcal{C}_R ^{\mathcal{DL}}$ follows. 
